# transformers_forecaster_chlorophyll

./: .gitignore  Answers Reviewers.docx  LICENSE  OPENCODE_WORKFLOW.md  README.md  Transformer Villarrica 200326.docx  package-lock.json  package.json  pyproject.toml  reviewer_comments.txt  ~$ansformer Villarrica 200326.docx
configs/: figure_02_mermaid.css  methodology_flowchart_mermaid.css  project.toml
data/processed/: daily_chl_a.csv  daily_chl_a_manifest.json  forecast_evaluation_manifest.json  foundation_20260531T161849Z_metadata.json  foundation_20260531T170122Z_metadata.json  foundation_20260531T200051Z_metadata.json  foundation_20260531T200120Z_metadata.json  (+5 more)
figures/: figure_02_preprocessing_workflow.metadata.json  figure_02_preprocessing_workflow.mmd  figure_04_forecast_metrics_la_poza.metadata.json  figure_05_forecast_metrics_pucon.metadata.json  figure_06_forecasts_la_poza.metadata.json  figure_07_forecasts_pucon.metadata.json  figure_08_uncertainty_intervals.metadata.json  figure_methodology_end_to_end.metadata.json  figure_methodology_end_to_end.mmd  realistic_imputation_validation.metadata.json
reports/: data_qa_blockers.csv  forecast_model_blockers.csv  manuscript_rewrite_sections.md  needs_author_input.md  opencode_validation_report.md  reviewer_comments_response_draft.md  reviewer_response_matrix.csv  reviewer_response_matrix.md
scripts/: plot_realistic_imputation_validation.py  recreate_figures.py  run_foundation_forecasts.py  run_pipeline.py
tests/: test_diagnostics.py  test_forecasting.py  test_ingest.py  test_preprocessing.py  test_realistic_imputation.py
(+85 files in other folders)
