[project]
name = "villarrica-forecaster"
version = "0.1.0"
description = "Reproducible data preparation, forecasting diagnostics, and figure recreation for the Lake Villarrica chlorophyll manuscript revision."
authors = [{ name = "Villarrica revision team" }]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "pandas>=2.1,<3.0",
  "numpy>=1.26,<3.0",
  "matplotlib>=3.8,<4.0",
  "scipy>=1.11,<2.0",
  "scikit-learn>=1.3,<2.0",
  "openpyxl>=3.1,<4.0",
]

[project.scripts]
villarrica-run-all = "villarrica_forecaster.pipeline:main"
villarrica-recreate-figures = "villarrica_forecaster.figures.recreate_all:main"
villarrica-run-foundation = "villarrica_forecaster.forecasting.run_foundation:main"

[tool.poetry]
packages = [{ include = "villarrica_forecaster", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0,<9.0"
ruff = ">=0.6,<1.0"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = ">=2.2,<3.0"
timesfm = {version = ">=1.3.0,<2.0.0", markers = "python_version < \"3.12\""}
chronos-forecasting = ">=2.2.2,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
